--- a/src/blocks/01-header/header-pug/header.pug
+++ b/src/blocks/01-header/header-pug/header.pug
@@ -3,20 +3,21 @@ header.header
         a(href='#').header__logo
             img(src='images/logo.png')
         nav.header__nav
-            a(href='#').header__nav-item Stories
-            a(href='#').header__nav-item Events
-            a(href='#').header__nav-item Places
-            a(href='#').header__nav-item Boards
-        input(type='checkbox' id='header-burger').header__nav-checkbox
-        label(for='header-burger').header__nav-label
-            div.header__nav-burger
-                div.header__nav-burger-layer
-                div.header__nav-burger-layer
-                div.header__nav-burger-layer
+            input(type='checkbox' id='header-burger').header__nav-checkbox
+            label(for='header-burger').header__nav-label
+                div.header__nav-burger
+                    div.header__nav-burger-layer
+                    div.header__nav-burger-layer
+                    div.header__nav-burger-layer
+            div.header__nav-menu
+                a(href='#').header__nav-menu-item Stories
+                a(href='#').header__nav-menu-item Events
+                a(href='#').header__nav-menu-item Places
+                a(href='#').header__nav-menu-item Boards
     div.header__content
         div.header__text
             span.header__word_blue Your
-            h2.header-title Beautiful Escape
+            h2.header__title Beautiful Escape
             p.header__qoute One of the greatest things about the sport of surfing is that you need only three things: your body,
                 br
                 | a surfboard, and a wave.
