--- a/src/css/media/media.css
+++ b/src/css/media/media.css
@@ -34,12 +34,12 @@
     .header__nav {
         margin-left: 116px;
     }
-    .header__aside {
-        display: none;
-    }
     .header__slider {
         top: 97%;
         left: 2.1%;
+    }
+    .header__aside {
+        display: none;
     }
 }
 
@@ -47,7 +47,6 @@
     .header__nav {
         margin-left: 91px;
     }
-
     .header__text {
         top: 32%;
     }
@@ -72,10 +71,11 @@
 @media all and (max-width: 1195px) {
     .header {
         padding-top: 15px;
+        padding-left: 15px;
     }
-    .header__content,
-    .header__logo-and-nav {
-        margin-left: 15px;
+    .header__logo-and-nav,
+    .header__content {
+        margin: 0;
     }
     .header__nav {
         margin-left: 140px;
@@ -109,67 +109,81 @@
     .header__image {
         width: 819px;
     }
-    .header__aside {
-        display: none;
-    }
-    .header__decor-text {
-        display: none;
-    }
 }
 @media all and (max-width: 924px) {
     .header {
-        padding-left: 20px;
-        padding-top: 20px;
+        padding-left: 15px;
+        padding-top: 15px;
     }
     .header__logo-and-nav {
-        padding: 0 0 30px 0;
+        padding: 0 0 15px 0;
         margin: 0;
     }
-    .header__content {
-        margin: 0;
-    }
-    .header__logo{
+    .header__logo {
         display: none;
     }
     .header__nav {
         margin: 0;
-        position: absolute;
-        top: 30px;
-        left: 0;
-        flex-direction: column;
-        background-color: rgba(255, 255, 255, 0.5);
-        z-index: 5;
-    }
-    .header__nav-item {
-        width: 100%;
-        padding: 15px 0;
-        border-bottom: 1px solid #0b0c11;
+        position: relative;
     }
     .header__nav-label {
         display: block;
     }
-    .header__nav-item,
+
+    .header__nav-burger:hover .header__nav-burger-layer:last-child {
+        background-color: rgba(255, 0, 0, 0.81);
+        transition: all ease 0.5s;
+    }
+
+    .header__nav-menu {
+        width: 135px;
+        position: absolute;
+        left: 0;
+        top: 27px;
+        margin-left: -180px;
+        flex-direction: column;
+        transition: all ease 0.5s;
+        background: rgba(250, 250, 250, 0.6);
+        box-shadow: 8px 8px 18px 0 rgba(122, 122, 122, 0.4);
+        border-bottom-right-radius: 5px;
+        z-index: 2;
+    }
+    .header__nav-menu-item {
+        padding: 15px 0;
+        padding-left: 10px;
+        border-bottom: 1px solid #f5f5f5;
+    }
+    .header__nav-menu-item:last-child {
+        border-bottom: none;
+    }
+    #header-burger:checked ~ .header__nav-menu {
+        margin: 0;
+    }
+    .header__nav-menu-item,
     .header__word_blue {
         font-size: 8px;
         letter-spacing: 5px;
     }
+    .header__content {
+        margin: 0;
+    }
     .header__text {
         top: 35.5%
     }
-    .header-title {
+    .header__title {
         padding-top: 14px;
         font-size: 56px;
     }
     .header__qoute {
         font-size: 14px;
-        color: #717171
+        color: #676767
     }
     .header__slider {
         display: none;
     }
     .header__image {
         width: 100%;
-        box-shadow: 0 10px 35px 0 rgba(11, 12, 17, 0.2);
+        box-shadow: 0 8px 35px 0 rgba(11, 12, 17, 0.2);
     }
     .header__aside {
         display: flex;
@@ -185,32 +199,132 @@
 }
 @media all and (max-width: 887px) {
     .header {
-        padding: 20px 20px 80px 20px;
+        padding-right: 15px;
     }
-    .header__aside {
-        display: none;
-    }
-    .header-title {
+    .header__title {
         font-size: 54px;
     }
     .header__qoute {
         font-size: 13px;
     }
+    .header__aside {
+        display: none;
+    }
 }
 @media all and (max-width: 829px) {
-    .header-title {
+    .header__nav-menu-item {
+        padding: 12px 0 12px 10px;
+    }
+    .header__title {
         padding-top: 12px;
     }
 }
 
 @media all and (max-width: 808px) {
-    .header-title {
-        padding-top: 10px;
-        padding-bottom: 18px;
-        font-size: 52px;
+    .header__title {
+        padding-top: 8px;
+        padding-bottom: 12px;
+        font-size: 50px;
     }
 }
 
+@media all and (max-width: 709px) {
+    .header__text {
+        width: 100%;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+    }
+    .header__word_blue {
+        font-size: 9px;
+        color: #ffffff;
+    }
+    .header__title {
+        font-size: 54px;
+        padding: 15px 0;
+    }
+    .header__qoute {
+        margin: 0 auto;
+        font-size: 14px;
+    }
+}
+@media all and (max-width: 609px) {
+    .header__word_blue {
+        font-size: 8px;
+    }
+    .header__title {
+        font-size: 50px;
+    }
+    .header__qoute {
+        font-family: "Poppins-Regular", sans-serif;
+        font-size: 12px;
+        color: #5d5d5d
+    }
+}
+@media all and (max-width: 560px) {
+    .header__nav-menu {
+        margin-left: -440px;
+        width: 398px;
+        flex-direction: row;
+        background: none;
+        box-shadow: 0 5px 15px 0 rgba(245, 245, 245, 0.2);
+        border-radius: 0;
+    }
+    .header__nav-menu-item {
+        padding-right: 5px;
+        border: none;
+        border-right: 1px solid #f5f5f5;
+        color: #f5f5f5;
+        font-size: 6.5px;
+    }
+    .header__nav-menu-item:last-child {
+        border:none;
+    }
+    .header__text {
+        width: auto;
+        left: 0;
+        top: 35%;
+        transform: none;
+        text-align: start;
+    }
+    .header__word_blue {
+        font-size: 6px;
+        color: #5da8ef;
+    }
+    .header__title {
+        padding: 8px 0;
+        font-size: 38px;
+    }
+    .header__qoute {
+        font-size: 12px;
+    }
+}
+
+@media all and (max-width: 425px) {
+    .header__text {
+        top: 30%;
+    }
+    .header__qoute {
+        display: none;
+    }
+}
+@media all and (max-width: 420px) {
+
+    .header__text {
+        top: 37.5%;
+    }
+    .header__title {
+        padding: 0;
+        font-size: 25px;
+    }
+}
+
+@media all and (max-width: 375px) {
+    .header__text {
+        top: 36%;
+    }
+}
 /*@media all and (max-width: 768px) {*/
     /*.header {*/
         /*padding: 15px 15px 80px 15px*/
