Responsive second section

--- a/src/blocks/02-quote/quote-sass/quote.sass
+++ b/src/blocks/02-quote/quote-sass/quote.sass
@@ -12,7 +12,7 @@
 .quote__text
   width: 615px
   margin-left: -3px
-  margin-bottom: 28px
+  padding-bottom: 28px
   font-family: 'Playfair Display-Regular', sans-serif
   font-size: 26px
   font-weight: 400
