--- a/src/css/media/media.css
+++ b/src/css/media/media.css
@@ -1,7 +1,7 @@
 /*------------------------------------------------------ HEADER ------------------------------------------------------*/
 @media all and (max-width: 1325px) {
     .header__nav {
-        margin-left: 94px;
+        margin-left: 91px;
     }
     .header__aside {
         padding: 0 2.6%;
@@ -9,6 +9,9 @@
 }
 
 @media all and (max-width: 1305px) {
+    .header__nav {
+        margin-left: 96px;
+    }
     .header__aside {
         flex-direction: column-reverse;
         padding: 0 1.6%;
@@ -21,12 +24,13 @@
 @media all and (max-width: 1285px) {
     .header {
         padding-top: 20px;
+        padding-bottom: 72.5px
     }
     .header__logo-and-nav {
         padding-bottom: 20px;
     }
     .header__nav {
-        margin-left: 6.5%;
+        margin-left: 6.3%;
     }
 }
 
@@ -106,6 +110,9 @@
     }
 }
 @media all and (max-width: 1011px) {
+    .header {
+        padding-bottom: 52.5px;
+    }
     .header__image {
         width: 819px;
     }
@@ -212,6 +219,9 @@
     }
 }
 @media all and (max-width: 829px) {
+    .header {
+        padding-bottom: 42px;
+    }
     .header__nav-menu-item {
         padding: 12px 0 12px 10px;
     }
@@ -229,6 +239,9 @@
 }
 
 @media all and (max-width: 709px) {
+    .header {
+        padding-bottom: 32px;
+    }
     .header__text {
         width: 100%;
         top: 50%;
@@ -262,6 +275,19 @@
         color: #5d5d5d
     }
 }
+
+@media all and (max-width: 599px) {
+    .header {
+        padding-bottom: 25px;
+    }
+}
+
+@media all and (max-width: 570px) {
+    .header__title {
+        padding: 6px 0;
+    }
+}
+
 @media all and (max-width: 560px) {
     .header__nav-menu {
         margin-left: -440px;
@@ -293,7 +319,6 @@
         color: #5da8ef;
     }
     .header__title {
-        padding: 8px 0;
         font-size: 38px;
     }
     .header__qoute {
@@ -301,14 +326,40 @@
     }
 }
 
-@media all and (max-width: 425px) {
-    .header__text {
-        top: 30%;
+@media all and (max-width: 555px) {
+    .header__title {
+        font-size: 35px;
     }
     .header__qoute {
         display: none;
     }
 }
+
+@media all and (max-width: 505px) {
+    .header__title {
+        font-size: 32px;
+    }
+}
+
+@media all and (max-width: 470px) {
+    .header__title {
+        font-size: 30px;
+    }
+}
+
+@media all and (max-width: 440px) {
+    .header__title {
+        font-size: 28px;
+    }
+}
+
+@media all and (max-width: 460px) {
+    .header {
+        padding-bottom: 20px;
+    }
+
+}
+
 @media all and (max-width: 420px) {
 
     .header__text {
@@ -321,54 +372,128 @@
 }
 
 @media all and (max-width: 375px) {
+    .header {
+        padding-bottom: 15px;
+    }
     .header__text {
         top: 36%;
     }
 }
-/*@media all and (max-width: 768px) {*/
-    /*.header {*/
-        /*padding: 15px 15px 80px 15px*/
-    /*}*/
-    /*.header__logo-and-nav,*/
-    /*.header__content {*/
-        /*margin-left: 0;*/
-    /*}*/
-    /*.header__nav {*/
-        /*display: none;*/
-    /*}*/
-    /*.header__text {*/
-        /*top: 10%;*/
-        /*width: 100%;*/
-        /*text-align: center;*/
-        /*z-index: 1;*/
-    /*}*/
-    /*.header-title {*/
-        /*padding-top: 18px;*/
-        /*padding-bottom: 165px;*/
-        /*color: #505050;*/
-    /*}*/
-    /*.header__qoute {*/
-        /*margin: 0 auto;*/
-        /*color: #505050;*/
-    /*}*/
-
-    /*.header__image {*/
-        /*box-shadow: 0 10px 35px 0 rgba(11, 12, 17, 0.2);*/
-    /*}*/
-
-    /*.header__image::after {*/
-        /*position: absolute;*/
-        /*top: 0;*/
-        /*left: 0;*/
-        /*width: 100%;*/
-        /*height: 100%;*/
-        /*content: "";*/
-        /*background-color: rgba(253, 253, 253, 0.8);*/
-        /*z-index: 0;*/
-    /*}*/
-
-    /*.header__slider {*/
-        /*display: none;*/
-    /*}*/
-/*}*/
 /*------------------------------------------------------ HEADER ------------------------------------------------------*/
+
+/*------------------------------------------------------ QUOTE -------------------------------------------------------*/
+@media all and (max-width: 1285px) {
+    .quote {
+        padding-top: 72.5px;
+    }
+}
+
+@media all and (max-width: 1011px) {
+    .quote {
+        padding-top: 52.5px;
+    }
+}
+
+@media all and (max-width: 829px) {
+    .quote {
+        padding-top: 42px;
+    }
+    .quote__text {
+        font-size: 24px;
+    }
+}
+
+@media all and (max-width: 709px) {
+    .quote {
+        padding-top: 32px;
+    }
+    .quote__text {
+        font-size: 22px;
+    }
+    .quote__author {
+        font-size: 8px;
+    }
+}
+
+@media all and (max-width: 641px) {
+    .quote__text {
+        width: 560px;
+        font-size: 20px;
+    }
+}
+
+@media all and (max-width: 599px) {
+    .quote {
+        padding-top: 25px;
+        padding-bottom: 186px;
+    }
+    .quote__text {
+        width: 500px;
+        padding-bottom: 24px;
+        font-size: 18px;
+    }
+    .quote__author {
+        letter-spacing: 4.9px;
+    }
+    .quote__author::after {
+        top: 138%
+    }
+}
+
+@media all and (max-width: 540px) {
+    .quote__text {
+        width: 450px;
+        font-size: 17px;
+    }
+    .quote__author {
+        font-size: 7px;
+    }
+}
+@media all and (max-width: 472px) {
+    .quote {
+        padding-bottom: 158px;
+    }
+    .quote__text {
+        width: 415px;
+    }
+    .quote__author::after {
+        top: 125%;
+    }
+}
+
+@media all and (max-width: 460px) {
+    .quote {
+        padding-top: 20px;
+        padding-bottom: 130px;
+    }
+    .quote__text {
+        width: 385px;
+        font-size: 15px;
+        line-height: 34px;
+        padding-bottom: 20px;
+    }
+    .quote__author::after {
+        height: 80px;
+    }
+}
+
+@media all and (max-width: 429px) {
+    .quote__text {
+        width: 350px;
+        font-size: 14px;
+    }
+}
+
+@media all and (max-width: 375px) {
+    .quote {
+        padding-top: 15px;
+    }
+    .quote__text {
+        width: 315px;
+        font-size: 12px;
+        line-height: 30px;
+    }
+    .quote__author {
+        letter-spacing: 4.5px;
+    }
+}
