--- a/src/css/media/media.css
+++ b/src/css/media/media.css
@@ -497,3 +497,144 @@
         letter-spacing: 4.5px;
     }
 }
+/*------------------------------------------------------ QUOTE -------------------------------------------------------*/
+
+/*------------------------------------------------- ARTICLE & VIDEO --------------------------------------------------*/
+
+@media all and (max-width: 1255px) {
+    .article-and-video__text,
+    .article-and-video__button {
+        margin-left: 4%;
+    }
+    .article-and-video__content-video {
+        left: 35.6%;
+    }
+}
+
+@media all and (max-width: 1202px) {
+    .article-and-video__content-video {
+        left: 36.5%;;
+    }
+    .article-and-video__content-video iframe {
+        width: 660px;
+    }
+}
+
+@media all and (max-width: 1159px) {
+        .article-and-video__text,
+        .article-and-video__button {
+            margin-left: 0;
+        }
+    .article-and-video__content-video {
+        height: 370px;
+    }
+    .article-and-video__content-video iframe {
+        width: 610px;
+        height: 370px;
+    }
+}
+
+@media all and (max-width: 1068px) {
+    .article-and-video {
+        padding: 0 15px;
+    }
+    .article-and-video__content {
+        display: flex;
+        flex-direction: column;
+        position: static;
+        margin-left: 0;
+    }
+
+    .media__content-article {
+        order: 2;
+    }
+    .article-and-video__image {
+        width: 100%;
+    }
+    .article-and-video__text {
+        width: 98%;
+        padding-top: 46px;
+        padding-bottom: 36px;
+        font-size: 16px;
+    }
+    .article-and-video__button {
+        font-size: 10px;
+    }
+    .article-and-video__content-video {
+        position: static;
+        width: 100%;
+        height: 520px;
+        margin-bottom: 65px;
+        order: 1;
+    }
+    .article-and-video__content-video iframe {
+        width: 100%;
+        height: 520px;
+    }
+}
+
+@media all and (max-width: 909px) {
+    .article-and-video__content-video {
+        margin-bottom: 45px;
+    }
+}
+
+@media all and (max-width: 820px) {
+    .article-and-video__content-video,
+    .article-and-video__content-video iframe {
+        height: 460px;
+    }
+}
+
+@media all and (max-width: 709px) {
+    .article-and-video__text {
+        padding-top: 32px;
+        padding-bottom: 26px;
+    }
+}
+
+@media all and (max-width: 688px) {
+    .article-and-video__content-video,
+    .article-and-video__content-video iframe {
+        height: 382px;
+    }
+}
+
+@media all and (max-width: 688px) {
+    .article-and-video__content-video {
+        margin-bottom: 25px;
+    }
+    .article-and-video__text {
+        padding-top: 28px;
+        padding-bottom: 22px;
+        font-size: 14px;
+    }
+    .article-and-video__button {
+        font-size: 8px;
+    }
+}
+
+@media all and (max-width: 541px) {
+    .article-and-video__content-video,
+    .article-and-video__content-video iframe {
+        height: 322px;
+    }
+}
+
+@media all and (max-width: 449px) {
+    .article-and-video__content-video,
+    .article-and-video__content-video iframe {
+        height: 292px;
+    }
+}
+
+@media all and (max-width: 392px) {
+    .article-and-video__content-video,
+    .article-and-video__content-video iframe {
+        height: 242px;
+    }
+    .article-and-video__text {
+        font-size: 12px;
+    }
+}
+/*------------------------------------------------- ARTICLE & VIDEO --------------------------------------------------*/
