Improved responsive design for third block

--- a/src/blocks/03-article-and-video/article-and-video-pug/article-and-video.pug
+++ b/src/blocks/03-article-and-video/article-and-video-pug/article-and-video.pug
@@ -1,11 +1,11 @@
 section.article-and-video
     div.article-and-video__content
-        div.media__content-article
+        div.article-and-video__article
             div.article-and-video__image
                 img(src='images/03-article-and-video/surfer-1.jpg')
             p.article-and-video__text.
                 By better understanding the various aspects of surfing, you will improve faster and have more fun in the water.
             button.article-and-video__button Read mor
                 span.article-and-video__button-last-letter e
-        div.article-and-video__content-video
-            iframe(width="705" height="550" src="https://www.youtube-nocookie.com/embed/TC0JnlNeObI?start=30" frameborder="0" allowfullscreen)
+        div.article-and-video__video
+            iframe(width="100%" height="100%" src="https://www.youtube-nocookie.com/embed/TC0JnlNeObI?start=30" frameborder="0" allowfullscreen)
