--- a/src/blocks/03-article-and-video/article-and-video-sass/article-and-video.sass
+++ b/src/blocks/03-article-and-video/article-and-video-sass/article-and-video.sass
@@ -1,13 +1,14 @@
 .article-and-video
+  padding-top: 58px
   padding-bottom: 114px
   background: repeating-linear-gradient(to right, rgba(255, 255, 255, 0.97) 0px, rgba(255, 255, 255, 0.97) 107px, #f5f5f5 107px, #f5f5f5 108px, rgba(255, 255, 255, 0.97) 108px, rgba(255, 255, 255, 0.97) 305px), url("../../../images/backgounds/ocean-bg.jpg") no-repeat
-  background-position-y: -121%
+  background-position-y: 423px
 
 .article-and-video__content
   position: relative
   margin-left: 107px
 
-.article-and-video__image
+.article-and-video__article
   width: 610px
 
 .article-and-video__text,
@@ -15,12 +16,11 @@
   margin-left: 8.5%
 
 .article-and-video__text
-  width: 348px
+  width: 350px
   padding-top: 56px
   padding-bottom: 46px
   font-family: "Poppins-Light", sans-serif
   font-size: 14px
-  font-weight: 300
   line-height: 24px
   letter-spacing: 0.35px
   color: #616161
@@ -29,7 +29,6 @@
   padding-bottom: 8px
   font-family: "League Spartan-Bold", sans-serif
   font-size: 9px
-  font-weight: 700
   text-transform: uppercase
   letter-spacing: 5.4px
   border-bottom: 2px solid #5da8ef
@@ -38,9 +37,10 @@
 .article-and-video__button-last-letter
   letter-spacing: 0
 
-.article-and-video__content-video
+.article-and-video__video
+  width: 705px
+  height: 550px
   position: absolute
   top: 7.5%
   left: 38.6%
-  height: 550px
   box-shadow: -2.121px -2.121px 35px 0px rgba(0, 0, 0, 0.19)
