--- a/src/blocks/04-surfboards-shop/surfboards-shop-sass/surfboards-shop.sass
+++ b/src/blocks/04-surfboards-shop/surfboards-shop-sass/surfboards-shop.sass
@@ -2,7 +2,7 @@
   padding-top: 114px
   padding-bottom: 86px
   background: repeating-linear-gradient(to right, rgba(255, 255, 255, 0.97) 0px, rgba(255, 255, 255, 0.97) 107px, #f5f5f5 107px, #f5f5f5 108px, rgba(255, 255, 255, 0.97) 108px, rgba(255, 255, 255, 0.97) 305px), url("../../../images/backgounds/ocean-bg.jpg") no-repeat
-  background-position-y: 440%
+  background-position-y: -316px
 
 .surfboards-shop__word_blue,
 .surfboards-shop__shop-item-button,
