--- a/src/css/media/media.css
+++ b/src/css/media/media.css
@@ -7,7 +7,6 @@
         padding: 0 2.6%;
     }
 }
-
 @media all and (max-width: 1305px) {
     .header__nav {
         margin-left: 96px;
@@ -20,7 +19,6 @@
         display: none;
     }
 }
-
 @media all and (max-width: 1285px) {
     .header {
         padding-top: 20px;
@@ -33,7 +31,6 @@
         margin-left: 6.3%;
     }
 }
-
 @media all and (max-width: 1270px) {
     .header__nav {
         margin-left: 116px;
@@ -46,7 +43,6 @@
         display: none;
     }
 }
-
 @media all and (max-width: 1225px) {
     .header__nav {
         margin-left: 91px;
@@ -71,7 +67,6 @@
         top: 12%;
     }
 }
-
 @media all and (max-width: 1195px) {
     .header {
         padding-top: 15px;
@@ -91,7 +86,6 @@
         top: 14.2%;
     }
 }
-
 @media all and (max-width: 1103px) {
     .header__image {
         width: 828px;
@@ -100,7 +94,6 @@
         top: 15.3%;
     }
 }
-
 @media all and (max-width: 1024px) {
     .header__image {
         width: 832px;
@@ -136,12 +129,10 @@
     .header__nav-label {
         display: block;
     }
-
     .header__nav-burger:hover .header__nav-burger-layer:last-child {
         background-color: rgba(255, 0, 0, 0.81);
         transition: all ease 0.5s;
     }
-
     .header__nav-menu {
         width: 135px;
         position: absolute;
@@ -229,7 +220,6 @@
         padding-top: 12px;
     }
 }
-
 @media all and (max-width: 808px) {
     .header__title {
         padding-top: 8px;
@@ -237,7 +227,6 @@
         font-size: 50px;
     }
 }
-
 @media all and (max-width: 709px) {
     .header {
         padding-bottom: 32px;
@@ -275,19 +264,16 @@
         color: #5d5d5d
     }
 }
-
 @media all and (max-width: 599px) {
     .header {
         padding-bottom: 25px;
     }
 }
-
 @media all and (max-width: 570px) {
     .header__title {
         padding: 6px 0;
     }
 }
-
 @media all and (max-width: 560px) {
     .header__nav-menu {
         margin-left: -440px;
@@ -325,7 +311,6 @@
         font-size: 12px;
     }
 }
-
 @media all and (max-width: 555px) {
     .header__title {
         font-size: 35px;
@@ -334,34 +319,27 @@
         display: none;
     }
 }
-
 @media all and (max-width: 505px) {
     .header__title {
         font-size: 32px;
     }
 }
-
 @media all and (max-width: 470px) {
     .header__title {
         font-size: 30px;
     }
 }
-
 @media all and (max-width: 440px) {
     .header__title {
         font-size: 28px;
     }
 }
-
 @media all and (max-width: 460px) {
     .header {
         padding-bottom: 20px;
     }
-
 }
-
 @media all and (max-width: 420px) {
-
     .header__text {
         top: 37.5%;
     }
@@ -370,7 +348,6 @@
         font-size: 25px;
     }
 }
-
 @media all and (max-width: 375px) {
     .header {
         padding-bottom: 15px;
@@ -387,13 +364,11 @@
         padding-top: 72.5px;
     }
 }
-
 @media all and (max-width: 1011px) {
     .quote {
         padding-top: 52.5px;
     }
 }
-
 @media all and (max-width: 829px) {
     .quote {
         padding-top: 42px;
@@ -402,7 +377,6 @@
         font-size: 24px;
     }
 }
-
 @media all and (max-width: 709px) {
     .quote {
         padding-top: 32px;
@@ -414,18 +388,16 @@
         font-size: 8px;
     }
 }
-
 @media all and (max-width: 641px) {
     .quote__text {
         width: 560px;
         font-size: 20px;
     }
 }
-
 @media all and (max-width: 599px) {
     .quote {
         padding-top: 25px;
-        padding-bottom: 186px;
+        padding-bottom: 143px;
     }
     .quote__text {
         width: 500px;
@@ -439,7 +411,6 @@
         top: 138%
     }
 }
-
 @media all and (max-width: 540px) {
     .quote__text {
         width: 450px;
@@ -451,7 +422,7 @@
 }
 @media all and (max-width: 472px) {
     .quote {
-        padding-bottom: 158px;
+        padding-bottom: 129px;
     }
     .quote__text {
         width: 415px;
@@ -460,11 +431,10 @@
         top: 125%;
     }
 }
-
 @media all and (max-width: 460px) {
     .quote {
         padding-top: 20px;
-        padding-bottom: 130px;
+        padding-bottom: 107px;
     }
     .quote__text {
         width: 385px;
@@ -476,14 +446,12 @@
         height: 80px;
     }
 }
-
 @media all and (max-width: 429px) {
     .quote__text {
         width: 350px;
         font-size: 14px;
     }
 }
-
 @media all and (max-width: 375px) {
     .quote {
         padding-top: 15px;
@@ -506,135 +474,136 @@
     .article-and-video__button {
         margin-left: 4%;
     }
-    .article-and-video__content-video {
+    .article-and-video__video {
         left: 35.6%;
     }
 }
-
-@media all and (max-width: 1202px) {
-    .article-and-video__content-video {
+@media all and (max-width: 1201px) {
+    .article-and-video__video {
+        width: 610px;
         left: 36.5%;;
     }
-    .article-and-video__content-video iframe {
-        width: 660px;
-    }
 }
-
 @media all and (max-width: 1159px) {
-        .article-and-video__text,
-        .article-and-video__button {
-            margin-left: 0;
-        }
-    .article-and-video__content-video {
-        height: 370px;
-    }
-    .article-and-video__content-video iframe {
-        width: 610px;
-        height: 370px;
-    }
-}
-
-@media all and (max-width: 1068px) {
-    .article-and-video {
-        padding: 0 15px;
-    }
-    .article-and-video__content {
-        display: flex;
-        flex-direction: column;
-        position: static;
+    .article-and-video__text,
+    .article-and-video__button {
         margin-left: 0;
     }
-
-    .media__content-article {
-        order: 2;
+}
+@media all and (max-width: 1067px) {
+    .article-and-video {
+        padding-left: 15px;
+        padding-right: 15px;
     }
-    .article-and-video__image {
-        width: 100%;
+    .article-and-video__content {
+        margin-left: 0;
+        display: flex;
+        flex-direction: row;
+    }
+    .article-and-video__article,
+    .article-and-video__video {
+        width: 50%;
+    }
+    .article-and-video__article {
+        margin-right: 7.5px;
+    }
+    .article-and-video__video {
+        position: static;
+        margin-left: 7.5px;
+        height: 437px;
     }
     .article-and-video__text {
-        width: 98%;
-        padding-top: 46px;
-        padding-bottom: 36px;
-        font-size: 16px;
+        width: 95%;
+        padding-top: 30px;
+        padding-bottom: 30px;
     }
-    .article-and-video__button {
-        font-size: 10px;
+}
+@media all and (max-width: 999px) {
+    .article-and-video__video {
+        height: 437px;
     }
-    .article-and-video__content-video {
-        position: static;
+    .article-and-video__text {
+        font-size: 13px;
+    }
+}
+@media all and (max-width: 920px) {
+    .article-and-video__video {
+        height: 392px;
+    }
+}
+@media all and (max-width: 827px) {
+    .article-and-video__content {
+        flex-direction: column;
+    }
+    .article-and-video__article,
+    .article-and-video__video {
         width: 100%;
-        height: 520px;
-        margin-bottom: 65px;
+        margin: 0;
+    }
+    .article-and-video__article {
+        order: 2;
+    }
+    .article-and-video__video {
+        height: 481.05px;
+        margin-bottom: 50px;
         order: 1;
     }
-    .article-and-video__content-video iframe {
-        width: 100%;
-        height: 520px;
-    }
 }
-
-@media all and (max-width: 909px) {
-    .article-and-video__content-video {
-        margin-bottom: 45px;
-    }
-}
-
-@media all and (max-width: 820px) {
-    .article-and-video__content-video,
-    .article-and-video__content-video iframe {
-        height: 460px;
-    }
-}
-
 @media all and (max-width: 709px) {
     .article-and-video__text {
         padding-top: 32px;
         padding-bottom: 26px;
     }
-}
-
-@media all and (max-width: 688px) {
-    .article-and-video__content-video,
-    .article-and-video__content-video iframe {
-        height: 382px;
+    .article-and-video__video {
+        height: 409px;
     }
 }
-
 @media all and (max-width: 688px) {
-    .article-and-video__content-video {
-        margin-bottom: 25px;
+    .article-and-video {
+        padding-top: 40px;
     }
     .article-and-video__text {
         padding-top: 28px;
         padding-bottom: 22px;
-        font-size: 14px;
+    }
+    .article-and-video__video {
+        height: 397px;
+        margin-bottom: 40px;
+    }
+}
+@media all and (max-width: 541px) {
+
+    .article-and-video__video {
+        height: 308px;
+        margin-bottom: 20px;
+    }
+    .article-and-video__article {
+        display: block;
+    }
+}
+@media all and (max-width: 472px) {
+    .article-and-video {
+        padding-top: 25px;
+    }
+    .article-and-video__text {
+        width: 100%;
+        font-size: 12px;
     }
     .article-and-video__button {
         font-size: 8px;
     }
-}
-
-@media all and (max-width: 541px) {
-    .article-and-video__content-video,
-    .article-and-video__content-video iframe {
-        height: 322px;
+    .article-and-video__video {
+        height: 266px;
     }
 }
-
-@media all and (max-width: 449px) {
-    .article-and-video__content-video,
-    .article-and-video__content-video iframe {
-        height: 292px;
-    }
-}
-
 @media all and (max-width: 392px) {
-    .article-and-video__content-video,
-    .article-and-video__content-video iframe {
-        height: 242px;
+    .article-and-video__video {
+        height: 218px;
     }
-    .article-and-video__text {
-        font-size: 12px;
+}
+@media all and (max-width: 375px) {
+    .article-and-video__video {
+        height: 208px;
     }
 }
 /*------------------------------------------------- ARTICLE & VIDEO --------------------------------------------------*/
