--- a/src/blocks/04-surfboards-shop/surfboards-shop-pug/surfboards-shop.pug
+++ b/src/blocks/04-surfboards-shop/surfboards-shop-pug/surfboards-shop.pug
@@ -2,7 +2,7 @@ section.surfboards-shop
     span.surfboards-shop__word_blue Shop
     h2.surfboards-shop__title Surfboards
     div.surfboards-shop__content
-        div.surfboards-shop__shop-item
+        div.surfboards-shop__shop-item.board-chili
             div.surfboards-shop__shop-item-photo.surfboards-shop__board-chilli
                 img(src='images/04-surfboards_shop/board-chilli.png')
             div.surfboards-shop__shop-item-specs
@@ -10,7 +10,7 @@ section.surfboards-shop
                 p.surfboards-shop__shop-item-name Chilli Rare Bird
                 p.surfboards-shop__shop-item-price $ 890
                 button.surfboards-shop__shop-item-button Buy
-        div.surfboards-shop__shop-item
+        div.surfboards-shop__shop-item.board-emery
             div.surfboards-shop__shop-item-photo.surfboards-shop__board-emery
                 img(src='images/04-surfboards_shop/board-emery.png')
             div.surfboards-shop__shop-item-specs
@@ -18,7 +18,7 @@ section.surfboards-shop
                 p.surfboards-shop__shop-item-name Emery NEM XF
                 p.surfboards-shop__shop-item-price $ 950
                 button.surfboards-shop__shop-item-button Buy
-        div.surfboards-shop__shop-item
+        div.surfboards-shop__shop-item.board-agency
             div.surfboards-shop__shop-item-photo
                 img(src='images/04-surfboards_shop/board-agency.png')
             div.surfboards-shop__shop-item-specs
