--- a/src/index/index.pug
+++ b/src/index/index.pug
@@ -14,7 +14,7 @@ html(lang='en')
         include ../blocks/02-quote/quote-pug/quote
         include ../blocks/03-article-and-video/article-and-video-pug/article-and-video
         include ../blocks/04-surfboards-shop/surfboards-shop-pug/surfboards-shop
-        //include ../blocks/05-articles/articles-pug/articles
-        //include ../blocks/06-subscribe/subscribe-pug/subscribe
-        //include ../blocks/07-contacts/contacts-pug/contacts
-        //include ../blocks/08-footer/footer-pug/footer
+        include ../blocks/05-articles/articles-pug/articles
+        include ../blocks/06-subscribe/subscribe-pug/subscribe
+        include ../blocks/07-contacts/contacts-pug/contacts
+        include ../blocks/08-footer/footer-pug/footer
