Refactoring and some fixes

--- a/src/blocks/articles/articles-pug/articles.pug
+++ b/src/blocks/articles/articles-pug/articles.pug
@@ -14,7 +14,7 @@ section.articles
                     |
                     span.articles__last-button-letter e
             div.articles__surf-training-image
-                img(src='images/05-articles/surfer-2.jpg')
+                img(src='images/articles/surfer-2.jpg')
         article.articles__point-break
             div.articles__point-break-text
                 span.articles__article-number.articles__point-break-number 02
@@ -30,4 +30,4 @@ section.articles
                     |
                     span.articles__last-button-letter e
             div.articles__point-break-image
-                img(src='images/05-articles/beach.jpg')
+                img(src='images/articles/beach.jpg')
