Better version of the articles-block

--- a/src/blocks/articles/articles-pug/articles.pug
+++ b/src/blocks/articles/articles-pug/articles.pug
@@ -1,33 +1,26 @@
-section.articles
-    div.articles__content
-        article.articles__surf-training
-            div.articles__surf-training-text
-                span.articles__article-number.articles__surf-training-number 01
-                h2.article__titles.surf-training-title
-                    |
-                    span.articles__first-title-letter S
-                    | urf Training
-                p.articles__article-summary.articles__surf-training-summary.
-                    By better understanding the various aspects of surfing, By better understanding the various aspects of
-                    surfing, you will improve faster and have more fun in the water.
-                button.articles__button.articles__surf-training-button Read mor
-                    |
-                    span.articles__last-button-letter e
-            div.articles__surf-training-image
-                img(src='images/articles/surfer-2.jpg')
-        article.articles__point-break
-            div.articles__point-break-text
-                span.articles__article-number.articles__point-break-number 02
-                h2.article__titles.point-break-title
-                    |
-                    span.articles__first-title-letter P
-                    | oint Break
-                p.articles__article-summary.articles__point-break-summary.
-                    By better understanding the various aspects of By better understanding the various aspects of surfing,
-                    By better understanding the various aspects of surfing, you will improve faster and have more
-                    fun in the water.
-                button.articles__button.articles__point-break-button Read mor
-                    |
-                    span.articles__last-button-letter e
-            div.articles__point-break-image
+section
+    article.surf-training
+        div.surf-training__text-area
+            p.text-area__article-number 01
+            h2.text-area__title Surf training
+            p.text-area__article-text.
+                By better understanding the various aspects of surfing, By better understanding the various aspects of
+                surfing, you will improve faster and have more fun in the water.
+            button.text-area__btn Read more
+        div.surf-training__image-area
+            div.surf-training__image
+                img(src="images/articles/surfer-2.jpg")
+            p Surf camps
+    article.point-break
+        div.point-break__text-area
+            p.text-area__article-number 02
+            h2.text-area__title Point Break
+            p.text-area__article-text.
+                By better understanding the various aspects of By better understanding the various aspects of surfing,
+                By better understanding the various aspects of surfing, you will improve faster and have more fun in
+                the water.
+            button.text-area__btn Read more
+        div.point-break__image-area
+            div.point-break__image
                 img(src='images/articles/beach.jpg')
+            p Surf camps
