added responsive to articles-block

--- a/src/blocks/articles/articles-sass/articles.sass
+++ b/src/blocks/articles/articles-sass/articles.sass
@@ -1,4 +1,4 @@
-section
+.articles
   padding-top: 86px
   padding-bottom: 213px
   background: repeating-linear-gradient(to right, rgba(255, 255, 255, 0.95) 0px, rgba(255, 255, 255, 0.95) 107px, #f5f5f5 107px, #f5f5f5 108px, rgba(255, 255, 255, 0.95) 108px, rgba(255, 255, 255, 0.95) 305px), url("../../../images/backgounds/surfer-bg.jpg") no-repeat
