--- a/src/blocks/articles/articles-pug/articles.pug
+++ b/src/blocks/articles/articles-pug/articles.pug
@@ -1,4 +1,4 @@
-section
+section.articles
     article.surf-training
         div.surf-training__text-area
             p.text-area__article-number 01
