responsive up to 375px for articles-block

--- a/src/blocks/article-and-video/article-and-video-sass/article-and-video.sass
+++ b/src/blocks/article-and-video/article-and-video-sass/article-and-video.sass
@@ -26,6 +26,7 @@
   color: #616161
 
 .article-and-video__button
+  display: block
   padding-bottom: 8px
   font-family: "League Spartan-Bold", sans-serif
   font-size: 9px
